--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "nodemon server.js",
+    "server": "nodemon server/server.js",
     "start": "concurrently \"npm run server\" \"npm run dev\"",
     "test": "jest"
   },
